src/js/looset_graph/antlr/loosetGraphParser.js
// Generated from loosetGraph.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import loosetGraphListener from './loosetGraphListener.js';


const atn = new antlr4.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class loosetGraphParser extends antlr4.Parser {

    static grammarFileName = "loosetGraph.g4";
    static literalNames = [ null, "':'", "'->'" ];
    static symbolicNames = [ null, null, null, "LABEL_ID", "ID", "SPACES_RULE_TOKEN" ];
    static ruleNames = [ "loosetGraph", "foldable", "foldableID", "edge", 
                         "node" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = loosetGraphParser.ruleNames;
        this.literalNames = loosetGraphParser.literalNames;
        this.symbolicNames = loosetGraphParser.symbolicNames;
    }



	loosetGraph() {
	    let localctx = new LoosetGraphContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, loosetGraphParser.RULE_loosetGraph);
	    var _la = 0;
	    try {
	        this.state = 28;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 13;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===3 || _la===4) {
	                this.state = 10;
	                this.edge();
	                this.state = 15;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 19;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 16;
	                    this.foldable(); 
	                }
	                this.state = 21;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	            }

	            this.state = 25;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===3 || _la===4) {
	                this.state = 22;
	                this.edge();
	                this.state = 27;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	foldable() {
	    let localctx = new FoldableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, loosetGraphParser.RULE_foldable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30;
	        this.foldableID();
	        this.state = 34;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 31;
	                this.node(); 
	            }
	            this.state = 36;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	foldableID() {
	    let localctx = new FoldableIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, loosetGraphParser.RULE_foldableID);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        _la = this._input.LA(1);
	        if(!(_la===3 || _la===4)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 38;
	        this.match(loosetGraphParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	edge() {
	    let localctx = new EdgeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, loosetGraphParser.RULE_edge);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.node();
	        this.state = 41;
	        this.match(loosetGraphParser.T__1);
	        this.state = 42;
	        this.node();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	node() {
	    let localctx = new NodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, loosetGraphParser.RULE_node);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        _la = this._input.LA(1);
	        if(!(_la===3 || _la===4)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

loosetGraphParser.EOF = antlr4.Token.EOF;
loosetGraphParser.T__0 = 1;
loosetGraphParser.T__1 = 2;
loosetGraphParser.LABEL_ID = 3;
loosetGraphParser.ID = 4;
loosetGraphParser.SPACES_RULE_TOKEN = 5;

loosetGraphParser.RULE_loosetGraph = 0;
loosetGraphParser.RULE_foldable = 1;
loosetGraphParser.RULE_foldableID = 2;
loosetGraphParser.RULE_edge = 3;
loosetGraphParser.RULE_node = 4;

class LoosetGraphContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraphParser.RULE_loosetGraph;
    }

	edge = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(EdgeContext);
	    } else {
	        return this.getTypedRuleContext(EdgeContext,i);
	    }
	};

	foldable = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FoldableContext);
	    } else {
	        return this.getTypedRuleContext(FoldableContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.enterLoosetGraph(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.exitLoosetGraph(this);
		}
	}


}



class FoldableContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraphParser.RULE_foldable;
    }

	foldableID() {
	    return this.getTypedRuleContext(FoldableIDContext,0);
	};

	node = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NodeContext);
	    } else {
	        return this.getTypedRuleContext(NodeContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.enterFoldable(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.exitFoldable(this);
		}
	}


}



class FoldableIDContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraphParser.RULE_foldableID;
    }

	LABEL_ID() {
	    return this.getToken(loosetGraphParser.LABEL_ID, 0);
	};

	ID() {
	    return this.getToken(loosetGraphParser.ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.enterFoldableID(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.exitFoldableID(this);
		}
	}


}



class EdgeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraphParser.RULE_edge;
    }

	node = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NodeContext);
	    } else {
	        return this.getTypedRuleContext(NodeContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.enterEdge(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.exitEdge(this);
		}
	}


}



class NodeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraphParser.RULE_node;
    }

	ID() {
	    return this.getToken(loosetGraphParser.ID, 0);
	};

	LABEL_ID() {
	    return this.getToken(loosetGraphParser.LABEL_ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.enterNode(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof loosetGraphListener ) {
	        listener.exitNode(this);
		}
	}


}




loosetGraphParser.LoosetGraphContext = LoosetGraphContext; 
loosetGraphParser.FoldableContext = FoldableContext; 
loosetGraphParser.FoldableIDContext = FoldableIDContext; 
loosetGraphParser.EdgeContext = EdgeContext; 
loosetGraphParser.NodeContext = NodeContext; 
